--- a/html/css/stylesansmap.css
+++ b/html/css/stylesansmap.css
@@ -566,7 +566,6 @@ font-size: 10px;
 /*#########################
 ########NOUVEAUTES#########
 #########################*/
-
 /*set up size of the whole timeline OK */
 .timeline{
   position: relative;
@@ -602,7 +601,6 @@ font-size: 10px;
   width:50%;
   padding:5px 35px;
 }
-
 /*for every odd numbered bullet point, align to the left OK*/
 .timeline ul li:nth-child(odd){
   text-align:right;
@@ -619,7 +617,6 @@ font-size: 10px;
   left:1.1%;
   width: 52%;
 }
-
 /*create circle icon on the timeline from the left (odd) OK */
 .timeline ul li:before {
   content:'';
@@ -665,14 +662,7 @@ font-size: 10px;
   /*position the circle icons on the timeline OK*/
   .timeline ul li:nth-child(even):before{left: -8%;}
 }
-@media screen and (min-width: 768px) and (max-width: 990px) {
-  /*set up size of the whole timeline OK */
-  .timeline{background-color: yellow;}
-  /*for every odd numbered bullet point, align to the left OK*/
-  .timeline ul li:nth-child(odd){right: 6.7%; width: 53.5%; background-color: #D9DE96;}
-  .timeline ul li:nth-child(odd):before{right:-6%;}
-  /* for every even numbered bullet point, align to the right OK*/
-  .timeline ul li:nth-child(even){left:1.1%; width: 52.5%; background-color: #D9DE96;}
-  /*position the circle icons on the timeline OK*/
-  .timeline ul li:nth-child(even):before{left: -10%;}
+@media screen and (max-width: 990px) {
+.timeline{
+  background-color: blue;
 }
