--- a/html/css/stylesansmap.css
+++ b/html/css/stylesansmap.css
@@ -673,16 +673,12 @@ font-size: 10px;
 }
 /*Style du texte sous la date OK*/
 .ajoutMP{
-  font-size: 0.8em;
+  font-size: 0.9em;
 }
-/*drawing the line itself OK
+/*drawing the line itself OK*/
 .timeline:before{
-  content: '';
-  position:absolute;
-  left:50%;
-  width:0.5em;
-  height:100%;
-  background-color:#D64E26;
+  left:10%;
+  width:0.3em;
 }
 /*styling the size of each step/content OK
 .timeline ul li{
