--- a/html/css/stylesansmap.css
+++ b/html/css/stylesansmap.css
@@ -687,21 +687,17 @@ font-size: 10px;
   width:50%;
   padding:5px 35px;
 }
-/*for every odd numbered bullet point, align to the left OK
+/*for every odd numbered bullet point, align to the left OK*/
 .timeline ul li:nth-child(odd){
-  text-align:right;
+  text-align:left;
   float:left;
-  clear:both;
-  right: 4%;
-  width: 52.5%;
+  width: 100%;
 }
-/* for every even numbered bullet point, align to the right OK
+/* for every even numbered bullet point, align to the right OK*/
 .timeline ul li:nth-child(even){
   text-align:left;
   float:right;
-  clear:both;
-  left:1.1%;
-  width: 52%;
+  width: 100%;
 }
 /*create circle icon on the timeline from the left (odd) OK 
   content:'';
