--- a/html/css/stylesansmap.css
+++ b/html/css/stylesansmap.css
@@ -690,7 +690,7 @@ font-size: 10px;
 /*for every odd numbered bullet point, align to the left OK*/
 .timeline ul li:nth-child(odd){
   text-align:left;
-  float:left;
+  float:right;
   width: 100%;
 }
 /* for every even numbered bullet point, align to the right OK*/
