--- a/html/css/stylesansmap.css
+++ b/html/css/stylesansmap.css
@@ -691,19 +691,24 @@ font-size: 10px;
 .timeline ul li:nth-child(odd){
   text-align:left;
   float:right;
+  clear:both;
+  right: 4%;
   width: 100%;
 }
 /* for every even numbered bullet point, align to the right OK*/
 .timeline ul li:nth-child(even){
   text-align:left;
   float:right;
+  clear:both;
+  left:1.1%;
   width: 100%;
 }
-/*create circle icon on the timeline from the left (odd) OK 
+/*create circle icon on the timeline from the left (odd) OK */
+.timeline ul li:before {
   content:'';
   position:absolute;
-  width:40px;
-  height:40px;
+  width:35px;
+  height:35px;
   background-color:#F7B88E;
   border-radius:60%;
   box-shadow: 0 0 0 6px rgba(251, 229, 214);
