--- a/html/css/stylesansmap.css
+++ b/html/css/stylesansmap.css
@@ -705,14 +705,8 @@ font-size: 10px;
 }
 /*create circle icon on the timeline from the left (odd) OK */
 .timeline ul li:before {
-  content:'';
-  position:absolute;
   width:35px;
   height:35px;
-  background-color:#F7B88E;
-  border-radius:60%;
-  box-shadow: 0 0 0 6px rgba(251, 229, 214);
-  z-index:1
 }
 /*position the circle icons on the timeline OK
 .timeline ul li:nth-child(even):before{
@@ -721,10 +715,11 @@ font-size: 10px;
 .timeline ul li:nth-child(odd):before{
   right:-3.6%;
 }
-/*styling the numbering. OK 
+
+/*styling the numbering. OK */
 .timeline ul li:before{
   font-weight:bold;
-  font-size:1.2em;
+  font-size:0.9em;
   color:white;
   text-align:center;
   padding-top:1%;
