--- a/html/css/stylesansmap.css
+++ b/html/css/stylesansmap.css
@@ -718,10 +718,6 @@ font-size: 10px;
 
 /*styling the numbering. OK */
 .timeline ul li:before{
-  font-weight:bold;
   font-size:0.9em;
-  color:white;
-  text-align:center;
-  padding-top:1%;
-}*/
+}
 }
