--- a/html/css/stylesansmap.css
+++ b/html/css/stylesansmap.css
@@ -679,14 +679,7 @@ font-size: 10px;
   padding:5px 35px;
 }
 /*for every odd numbered bullet point, align to the left OK*/
-.timeline ul li:nth-child(odd){
-  text-align:left;
-  float:right;
-  clear:both;
-  right: -5%;
-  width: 110%;
-  background-color: white;
-}
+.timeline ul li:nth-child(odd){right: -5%;  width: 110%;  background-color: white; }
 /* for every even numbered bullet point, align to the right OK*/
 .timeline ul li:nth-child(even){
   text-align:left;
@@ -700,7 +693,7 @@ font-size: 10px;
 /*position the circle icons on the timeline OK
 .timeline ul li:nth-child(even):before{
   left: -3.6%;
-}
+}*/
 .timeline ul li:nth-child(odd):before{
   right:-3.6%;
 }
