--- a/html/css/stylesansmap.css
+++ b/html/css/stylesansmap.css
@@ -113,6 +113,13 @@ b{
   box-shadow: 1.5px 1.5px 22px 0px rgba(251,229,214,1);
 }
 /*#########################
+#########SUPPORT###########
+#########################*/
+.sources ul {
+  list-style-type: none;
+}
+
+/*#########################
 #####MENTIONS LEGALES######
 #########################*/
 .Titre1 {
