--- a/html/css/stylesansmap.css
+++ b/html/css/stylesansmap.css
@@ -115,7 +115,7 @@ b{
 /*#########################
 #########SUPPORT###########
 #########################*/
-.sources ul {
+.particulier ul {
   list-style-type: none;
 }
 
