--- a/html/css/stylesansmap.css
+++ b/html/css/stylesansmap.css
@@ -118,7 +118,11 @@ b{
 .particulier ul {
   list-style-type: none;
 }
-
+.profession {
+  text-decoration: underline;
+  font-size: 0.8em;
+  color:; red;
+}
 /*#########################
 #####MENTIONS LEGALES######
 #########################*/
