--- a/html/css/stylesansmap.css
+++ b/html/css/stylesansmap.css
@@ -126,6 +126,10 @@ b{
   font-weight: bold;
   color: red;
 }
+.logosupporter {
+   border: 1px solid #D64E26;
+  box-shadow: 1.5px 1.5px 22px 0px rgba(251,229,214,1);
+}
 /*#########################
 #####MENTIONS LEGALES######
 #########################*/
