--- a/html/css/stylesansmap.css
+++ b/html/css/stylesansmap.css
@@ -127,8 +127,8 @@ b{
   color: red;
 }
 .logosupporter {
-   border: 1px solid #D64E26;
-  box-shadow: 1.5px 1.5px 22px 0px rgba(251,229,214,1);
+   border: 1px solid #FBE5D6FF;
+  box-shadow: 2px 2px 22px 0px rgba(251,229,214,1);
 }
 /*#########################
 #####MENTIONS LEGALES######
