--- a/html/css/stylesansmap.css
+++ b/html/css/stylesansmap.css
@@ -134,6 +134,9 @@ b{
 .entreprise {
   min-width: 100%;
 }
+.particulier {
+  min-width: 100%;
+}
 }
 /*#########################
 #####MENTIONS LEGALES######
