--- a/html/css/stylesansmap.css
+++ b/html/css/stylesansmap.css
@@ -127,7 +127,7 @@ b{
   color: red;
 }
 .logosupporter {
-   border: 1px solid #FBE5D6FF;
+  border: 1px solid #FBE5D6FF;
   box-shadow: 2px 2px 22px 0px rgba(251,229,214,1);
 }
 @media screen and (max-width: 990px) {
@@ -136,6 +136,10 @@ b{
 }
 .particulier {
   min-width: 100%;
+}
+.logosupporter {
+  min-width: 60%;
+  min-height: 60%;
 }
 }
 /*#########################
