--- a/html/css/stylesansmap.css
+++ b/html/css/stylesansmap.css
@@ -312,7 +312,7 @@ b{
 }
 .correctspacebug {
     height: 1.1em;
-    background-color: blue;
+    background-color: red;
 }
 /*##################################################
 ############ZONE DU MENU ET LOGO####################
