--- a/html/css/stylesansmap.css
+++ b/html/css/stylesansmap.css
@@ -312,7 +312,6 @@ b{
 }
 .correctspacebug {
     height: 20em;
-    background-color: red;
 }
 /*##################################################
 ############ZONE DU MENU ET LOGO####################
@@ -481,7 +480,7 @@ overflow-x: auto;
 }
 .correctspacebug {
     height: 1.1em;
-    background-color: blue;
+    background-color: yellow;
 }
 }
 
