--- a/html/css/stylesansmap.css
+++ b/html/css/stylesansmap.css
@@ -462,8 +462,8 @@ min-width: 100%;
 }
 .correctspacebug {
     height: 1.1em;
-    background-color: blue;
 }
+
 }
 
 @media screen and (min-width: 990px) and (max-width: 1200px) {
@@ -479,7 +479,7 @@ overflow-x: auto;
   height: 0%;
 }
 .correctspacebug {
-    height: 0.6em;
+    height: 0.4em;
     background-color: yellow;
 }
 }
@@ -492,6 +492,10 @@ overflow-x: auto;
 .pagederoulante {
   height: 92%;
   overflow-y: scroll;
+}
+.correctspacebug {
+    height: 0.4em;
+    background-color: red;
 }
 }
 
