--- a/html/css/stylesansmap.css
+++ b/html/css/stylesansmap.css
@@ -492,8 +492,6 @@ overflow-x: auto;
   padding:0;
 }
 .copyright {
-    text-align: center;
-    color: #D64E26;
     font-size: 8px;
 }
 }
@@ -514,6 +512,9 @@ overflow-x: auto;
 .particulier ul {
   margin: 0;
   padding:0;
+}
+.copyright {
+    font-size: 8px;
 }
 }
 
