--- a/html/css/stylesansmap.css
+++ b/html/css/stylesansmap.css
@@ -239,8 +239,8 @@ b{
 }
 .card {
   background-color: #FBE5D6FF; 
-  border: 1px solid #D64E26;
-  box-shadow: 2px 2px 22px 0px rgba(251,229,214,1);
+  border: 1px solid #E99A1F;
+  box-shadow: 3px 3px 22px 0px rgba(251,229,214,1);
 }
 /*#########################
 ########COPYRIGHT##########
