--- a/html/css/stylesansmap.css
+++ b/html/css/stylesansmap.css
@@ -234,8 +234,8 @@ b{
   width: 20%;
 }
 .card-img-top {
-  max-width: 100%;
-  max-height: 100%;
+  max-width: 100px;
+  max-height: 100px;
 }
 .card {
   border: 1px solid #E99A1F;
