--- a/html/css/stylesansmap.css
+++ b/html/css/stylesansmap.css
@@ -241,10 +241,12 @@ b{
   max-height: 120px;
 }
 .card {
-  text-align: center;
   align-items: center;
   border: 1px solid #E99A1F;
   box-shadow: 3px 3px 22px 0px rgba(251,229,214,1);
+}
+.envoiRGPD {
+  align-items: center;
 }
 /*#########################
 ########COPYRIGHT##########
