--- a/html/css/stylesansmap.css
+++ b/html/css/stylesansmap.css
@@ -31,6 +31,11 @@ html, body {
   font-weight: bold;
   font-size: 1.2em;
 }
+.sous_titre {
+  margin-top: 1%;
+  font-weight: bold;
+  font-size: 1em;
+}
 hr {
   margin: 0;
 }
