--- a/html/css/stylesansmap.css
+++ b/html/css/stylesansmap.css
@@ -455,7 +455,7 @@ caption {
   float: right;
   height: 40%;
   width: 40%;
-  margin: 1%;
+  margin-left: 1%;
 }
 .img2creationparfum {
   float: right;
