--- a/html/css/stylesansmap.css
+++ b/html/css/stylesansmap.css
@@ -203,7 +203,7 @@ hr {
   width: 20%;
 }
 .img1creationparfum {
-  vertical-align: middle;
+  align-items: center;
   height: 30%;
   width: 30%;
 }
