--- a/html/css/stylesansmap.css
+++ b/html/css/stylesansmap.css
@@ -627,10 +627,7 @@ ul {
 
 }
 .img4creationparfum {
-  align-items: center;
-  height: 80%;
-  width: 80%;
-
+display: none;
 }
 .img5creationparfum {
   align-items: center;
