--- a/html/css/stylesansmap.css
+++ b/html/css/stylesansmap.css
@@ -41,17 +41,6 @@ p {
   font-weight: bold;
   font-size: 1em;
 }
-.listetypeparfum {
-  text-decoration: underline;
-  color: #D64E26;
-  font-size: 0.8em;
-  margin-bottom: 0;
-  margin-top: 0; 
-}
-.categorieparfum li {
-  margin: 0;
-  line-height: 1.2;
-}
 hr {
   margin: 0;
 }
@@ -93,10 +82,6 @@ hr {
 .text-in-color-brown {
   color: #D64E26;
 }
-.exemple {
-  font-size: 0.65em; 
-  color: #494747;
-}
 .with-my-border {
   border: 2px solid #D64E26;
 }
@@ -108,6 +93,27 @@ hr {
 }
 .text-underline {
   text-decoration: underline;
+}
+/*#########################
+######CREATION PARFUM######
+#########################*/
+.listetypeparfum {
+  text-decoration: underline;
+  color: #D64E26;
+  font-size: 0.8em;
+  margin-bottom: 0;
+  margin-top: 0; 
+}
+.categorieparfum li {
+  margin: 0;
+  line-height: 1.2;
+}
+/*#########################
+########INGREDIENTS########
+#########################*/
+.exemple {
+  font-size: 0.65em; 
+  color: #494747;
 }
 .catégories{
   color: #087625;
@@ -345,7 +351,6 @@ hr {
     cursor:pointer;
     display: inline;
 }
-
 .fillright{
     background-color:#FBE5D6FF;
     border-top-left-radius: 7px;
@@ -359,9 +364,6 @@ hr {
 .correctspacebug {
     height: 20em;
 }
-/*##################################################
-############ZONE DU MENU ET LOGO####################
-##################################################*/
 .logomenu:hover{
     transform: scale(1.1);
 }
