--- a/html/css/stylesansmap.css
+++ b/html/css/stylesansmap.css
@@ -119,6 +119,7 @@ hr {
   color: #087625;
   font-size: 0.9em;
   text-decoration: underline;
+  text-transform: uppercase;
 }
 .catégories2 {
   font-weight: bold;
