--- a/html/css/stylesansmap.css
+++ b/html/css/stylesansmap.css
@@ -115,7 +115,7 @@ hr {
   font-size: 0.65em; 
   color: #494747;
 }
-.ingredientnat ul ol{
+.ingredientnat ul{
   font-size: 0.8em; 
 }
 .catégories{
