--- a/html/css/stylesansmap.css
+++ b/html/css/stylesansmap.css
@@ -111,6 +111,10 @@ hr {
 /*#########################
 ########INGREDIENTS########
 #########################*/
+.titreMP {
+  font-weight: bold;
+  color: #D64E26;
+}
 .exemple {
   font-size: 0.65em; 
   color: #494747;
