--- a/html/css/stylesansmap.css
+++ b/html/css/stylesansmap.css
@@ -133,6 +133,12 @@ hr {
   font-weight: normal;
   text-decoration: none;
 }
+.imgMP1{
+  float: right;
+  margin-left: 2%;
+  max-height: 50%;
+  max-height: 50%;
+}
 /*#########################
 ##########SOURCES##########
 #########################*/
