--- a/html/css/stylesansmap.css
+++ b/html/css/stylesansmap.css
@@ -119,13 +119,15 @@ hr {
   font-size: 0.65em; 
   color: #494747;
 }
+.ingredientnat ul {
+  font-size: 0.8em;
+}
 .catégories{
   color: #087625;
   font-weight: bold;
   font-size: 1em;
   text-decoration: underline;
   text-transform: uppercase;
-  padding-left: 2em;
 }
 .catégories2 {
   font-weight: bold;
