--- a/html/css/stylesansmap.css
+++ b/html/css/stylesansmap.css
@@ -124,6 +124,8 @@ hr {
   padding-right: 10%;
 }
 .catégories{
+  margin-top: 1%;
+  margin-bottom: 1%;
   color: #087625;
   font-weight: bold;
   font-size: 1em;
