--- a/html/css/stylesansmap.css
+++ b/html/css/stylesansmap.css
@@ -125,7 +125,7 @@ hr {
   background-color: blue;
 }
 .catégories{
-  padding: 2%;
+  background-color: yellow; 
   color: #087625;
   font-weight: bold;
   font-size: 1em;
