--- a/html/css/stylesansmap.css
+++ b/html/css/stylesansmap.css
@@ -133,8 +133,10 @@ hr {
   text-transform: uppercase;
 }
 .catégories2 {
+  padding-left: 3%;
   font-weight: bold;
   text-decoration: underline;
+  background-color: white;
 }
 .sous_texte{
   font-weight: normal;
