--- a/html/css/stylesansmap.css
+++ b/html/css/stylesansmap.css
@@ -133,6 +133,7 @@ hr {
 .catégories2 {
   font-weight: bold;
   text-decoration: underline;
+  background-color: grey; 
 }
 .sous_texte{
   font-weight: normal;
