--- a/html/css/stylesansmap.css
+++ b/html/css/stylesansmap.css
@@ -130,11 +130,12 @@ hr {
   text-decoration: underline;
   text-transform: uppercase;
   margin-bottom: 1em;
+  margin-top: 1em;
 }
 .catégories2 {
   font-weight: bold;
   text-decoration: underline;
-  margin-bottom: 0.8em;
+  margin-top: 0.8em;
   background-color: grey; 
 }
 .sous_texte{
