--- a/html/css/stylesansmap.css
+++ b/html/css/stylesansmap.css
@@ -145,6 +145,12 @@ hr {
   max-height: 20%;
   max-height: 20%;
 }
+.imgingredient {
+  min-height: 2em;
+  max-height: 2em;
+  min-width: 2em;
+  max-width: 2em;
+}
 /*#########################
 ##########SOURCES##########
 #########################*/
