--- a/html/css/stylesansmap.css
+++ b/html/css/stylesansmap.css
@@ -690,8 +690,10 @@ ul {
 }
 .imgMP1{
   align-items: center;
+  min-height: 10%;
   max-height: 10%;
-  max-height: 10%;
+  min-width: 10%;
+  max-width: 10%;
 }
 .imgingredient {
   min-height: 20%;
