--- a/html/css/stylesansmap.css
+++ b/html/css/stylesansmap.css
@@ -151,6 +151,12 @@ hr {
   min-width: 20%;
   max-width: 20%;
 }
+.resumenat{
+  min-height: 20%;
+  max-height: 20%;
+  min-width: 20%;
+  max-width: 20%;
+}
 /*#########################
 ##########SOURCES##########
 #########################*/
