--- a/html/css/stylesansmap.css
+++ b/html/css/stylesansmap.css
@@ -152,10 +152,11 @@ hr {
   max-width: 20%;
 }
 .resumenat{
-  min-height: 20%;
-  max-height: 20%;
-  min-width: 20%;
-  max-width: 20%;
+  align-items: center;
+  min-height: 50%;
+  max-height: 50%;
+  min-width: 50%;
+  max-width: 50%;
 }
 /*#########################
 ##########SOURCES##########
