--- a/html/css/stylesansmap.css
+++ b/html/css/stylesansmap.css
@@ -678,13 +678,7 @@ ul {
   display: none;
 }
 .img5creationparfum {
-  align-items: center;
-  height: 80%;
-  width: 80%;
-  margin-right: 10%;
-  margin-left: 10%;
-  margin-top: 5%;
-  margin-bottom: 5%;
+  display: none;
 }
 .img6creationparfum {
   align-items: center;
