--- a/html/css/stylesansmap.css
+++ b/html/css/stylesansmap.css
@@ -630,7 +630,7 @@ ul {
   margin-top:85%; 
 }
 .img1allergene {
-  align-items: center;
+  text-align: center;
   margin-bottom: 5%;
   height: 90%;
   width: 90%;
