--- a/html/css/stylesansmap.css
+++ b/html/css/stylesansmap.css
@@ -636,7 +636,7 @@ ul {
   width: 90%;
 }
 .img2allergene { 
-  align-items: center;
+  text-align: center;
   height: 15%;
   width: 90%; 
   margin: 0;
