--- a/html/css/stylesansmap.css
+++ b/html/css/stylesansmap.css
@@ -642,7 +642,7 @@ ul {
   margin-bottom: 4%;
 }
 .img3allergene { 
-  align-items: center;
+  text-align: center;
   height: 30%;
   width: 90%; 
   margin:0;
