--- a/html/css/stylesansmap.css
+++ b/html/css/stylesansmap.css
@@ -179,7 +179,7 @@ hr {
 }
 .profession {
   font-style: italic;
-  font-size: 0.8em;
+  font-size: 1em;
 }
 .nouveausupporter {
   font-weight: bold;
@@ -632,6 +632,12 @@ ul {
 }
 .solvemobilepadding {
   margin-top:85%; 
+}
+.hierarchie {
+  min-width: 90%;
+  min-height: 90%;
+  max-width: 90%;
+  max-height: 90%;
 }
 .img1allergene {
   text-align: center;
