--- a/html/css/style.css
+++ b/html/css/style.css
@@ -2,6 +2,45 @@ html, body {
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
 
+/*###################
+PARFUM EMBLEMATIQUES
+###################*/
+.details h1 {
+	font-family: 'Montserrat', sans-serif;
+	text-transform: uppercase;
+}
+.frame {
+	text-align: center;	
+	position: relative;
+	cursor: pointer;	
+	perspective: 500px; 
+}
+.frame img {
+	width: 300px;
+	height: 300px;
+}
+.frame .details {
+	width: 70%;
+	height: 80%;	
+	padding: 5% 8%;
+	position: absolute;
+	content: "";
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%) rotateY(90deg);
+	transform-origin: 50%;
+	background: rgba(255,255,255,0.9);	
+	opacity: 0;
+	transition: all 0.4s ease-in;
+}
+.frame:hover .details {
+	transform: translate(-50%, -50%) rotateY(0deg);
+	opacity: 1;
+}
+
+
+
+
 #menu-block {
   z-index: 2;
   min-height: 500px;
