--- a/html/css/stylesansmap.css
+++ b/html/css/stylesansmap.css
@@ -150,7 +150,7 @@ hr {
   float: right;
   margin-left: 2%;
   max-height: 10%;
-  max-height: 10%;
+  max-width: 10%;
 }
 .imgingredient {
   min-height: 20%;
