--- a/html/css/stylesansmap.css
+++ b/html/css/stylesansmap.css
@@ -165,6 +165,13 @@ hr {
   min-width: 70%;
   max-width: 70%;
 }
+.timelineifra {
+  align-items: center;
+  min-height: 50%;
+  max-height: 50%;
+  min-width: 50%;
+  max-width: 50%;
+}
 /*#########################
 ##########SOURCES##########
 #########################*/
