--- a/html/css/stylesansmap.css
+++ b/html/css/stylesansmap.css
@@ -479,12 +479,10 @@ caption {
     font-style: italic;
     caption-side: top;
 }
-.categorieifra tr:nth-child(even) {
+.categorieifra tr {
   background-color: none;
 }
-.categorieifra tr:nth-child(odd) {
-  background-color: none;
-}
+
 /*#########################
 #######RESPONSIVE##########
 #########################*/
