--- a/html/css/stylesansmap.css
+++ b/html/css/stylesansmap.css
@@ -55,6 +55,10 @@ hr {
   height: 94.5%;
   overflow-y: scroll;
 }
+.scrollbar-inside2 {
+  overflow-y: auto;
+  max-height: calc(125vh - 320px);
+}
 #menu-block {
   z-index: 2;
   min-height: 500px;
@@ -101,6 +105,7 @@ hr {
 .text-underline {
   text-decoration: underline;
 }
+
 /*#########################
 ######CREATION PARFUM######
 #########################*/
