--- a/html/css/stylesansmap.css
+++ b/html/css/stylesansmap.css
@@ -638,6 +638,13 @@ overflow-x: auto;
   color: #D64E26;
   font-size: 0.9em;
 }
+.timelineifra {
+  align-items: center;
+  min-height: 85%;
+  max-height: 85%;
+  min-width: 85%;
+  max-width: 85%;
+}
 }
 
 @media screen and (max-width: 768px) {
@@ -736,6 +743,14 @@ ul {
   min-width: 60%;
   max-width: 60%;
 }
+.timelineifra {
+  align-items: center;
+  min-height: 100%;
+  max-height: 100%;
+  min-width: 100%;
+  max-width: 100%;
+}
+
 .imgingredientblock {
   display: none;
 }
