--- a/html/css/stylesansmap.css
+++ b/html/css/stylesansmap.css
@@ -485,7 +485,7 @@ caption {
     caption-side: top;
 }
 .categorieifra table {
-  background-color: red;
+  background-color: white;
   text-align: right;
 }
 
