--- a/html/css/stylesansmap.css
+++ b/html/css/stylesansmap.css
@@ -494,7 +494,7 @@ caption {
 }
 .categorieifra td, .table td {
     border: 1px solid black;
-    text-align: right;  
+    text-align: left;  
     vertical-align: middle;
     white-space: normal;
 }
