--- a/html/css/style.css
+++ b/html/css/style.css
@@ -441,6 +441,9 @@ td, .table td {
 .nav-link:active {
   background-color: red;
 }
+.nav-item:active {
+  background-color: red;
+}
 
 
 @media screen and (min-width: 1400px) {
