--- a/html/css/style.css
+++ b/html/css/style.css
@@ -438,11 +438,9 @@ td, .table td {
   border: 2px solid rgba(41,161,239,0.33);
   border-radius: 10px 10px 10px 10px;
 }
-.nav-link:active {
-  background-color: red;
-}
-.nav-item:active {
-  background-color: red;
+.active{
+    color: orange;
+    background-color: red;
 }
 
 
