--- a/html/css/style.css
+++ b/html/css/style.css
@@ -433,8 +433,10 @@ td, .table td {
   font-size: small;
   padding-top: 10px;
 }
-.panel-heading {
-  
+.navbar{
+  width: 100%;
+  background-color: #555;
+  overflow: auto;
 }
 .nav-item {
   white-space: nowrap;
