--- a/html/css/style.css
+++ b/html/css/style.css
@@ -433,7 +433,7 @@ td, .table td {
   font-size: small;
   padding-top: 10px;
 }
-.navbar{
+nav{
   width: 100%;
   background-color: #555;
   overflow: auto;
