--- a/html/css/style.css
+++ b/html/css/style.css
@@ -545,6 +545,10 @@ h1 {
     height: 72%;
     text-align: center;
 }
+.scrollbar-inside {
+  overflow-y: auto;
+  max-height: calc(105vh - 320px);
+}
 .space{
     height:20%;
 }
