--- a/html/css/style.css
+++ b/html/css/style.css
@@ -1,10 +1,90 @@
 html, body {
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
+
+
+/*###################
+PARFUM EMBLEMATIQUES
+###################*/
+@media screen and (max-width: 990px) {
+  .mouseavailable {
+    display: none;
+  }
+  .mousenotavailable {
+    display: initial;
+  }
+  .mousenotavailable img {
+  width: 12em;
+  height: 12em;
+  }
+  .powered {
+  color: red;
+  font-size: 0.8em;
+  text-align: center;
+  align-items: center;
+}
+}
+@media screen and (min-width: 990px) {
+  .mouseavailable {
+    display: initial;
+  }
+  .mousenotavailable {
+    display: none;
+  }
+}
+
+.titledetails {
+  font-family: 'Montserrat', sans-serif;
+  font-weight: bold;
+  text-transform: uppercase;
+  font-size: 1.1em;
+}
+.frame {
+  text-align: center; 
+  position: relative;
+  cursor: pointer;  
+  perspective: 500px; 
+}
+.frame img {
+  width: 12em;
+  height: 12em;
+}
+.frame .details {
+  width: 70%;
+  height: 100%;  
+  padding: 5% 8%;
+  position: absolute;
+  content: "";
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%) rotateY(90deg);
+  transform-origin: 50%;
+  background: rgba(255,255,255,0.9);
+  border: black 1px;  
+  opacity: 0;
+  transition: all 0.4s ease-in;
+}
+.frame:hover .details {
+  transform: translate(-50%, -50%) rotateY(0deg);
+  opacity: 0.8;
+  border: solid black;
+}
+.powered {
+  color: grey;
+  font-size: 0.7em;
+  text-align: center;
+}
+.detailsmini {
+  text-align: center;
+  margin-top: 10%;
+}
+
+
 #menu-block {
   z-index: 2;
   min-height: 500px;
 }
+
 #mapblock {
   z-index: 1;
 }
@@ -70,9 +150,10 @@ html, body {
   text-decoration: underline;
 }
 
+
 .scrollbar-inside {
   overflow-y: auto;
-  max-height: calc(95vh - 320px);
+  max-height: calc(110vh - 320px);
 }
 
 .scrollbar-inside2 {
@@ -415,6 +496,45 @@ td, .table td {
   width: 100px;
 }
 
+/*############################
+######MENTIONS LEGALES########
+############################*/
+
+.titre1 {
+    font-weight: bold;
+    list-style-type: upper-roman;
+}
+.titre2 {
+    list-style-type: lower-alpha;
+
+}
+.paragraphetete {
+    margin-top: 1%; 
+    margin-left: -5%;
+}
+.paragraphetete2 {
+    margin-top: 1%; 
+    margin-left: -10%;
+}
+.paragraphe {
+    margin-left: -5%;
+}
+.paragraphe2 {
+    margin-left: -10%;
+}
+.titreparagraphe {
+    margin-left: -5%;
+    text-decoration: underline;
+    font-weight: bold;
+
+}
+.miniliste{
+    padding-top: 1%;
+    padding-bottom: 1%;
+}
+.fond-blanc {
+    background-color: white;
+}
 
 /*#########################
 ###########MODAL###########
@@ -423,6 +543,7 @@ td, .table td {
     font-size: 18px;
     font-weight: bold;
     text-align: center;
+    text-decoration:underline;
 }
 
 .my-modal {
@@ -433,11 +554,8 @@ td, .table td {
   font-size: small;
   padding-top: 10px;
 }
-.nav-item {
-  white-space: nowrap;
-  font-weight: bold;
-  text-align: justify;
-}
+
+
 
 @media screen and (min-width: 1400px) {
 h1 {
@@ -454,10 +572,6 @@ h1 {
     height: 100%;
     text-align: center;
     padding-top: 2%;
-}
-.scrollbar-inside {
-  overflow-y: auto;
-  max-height: calc(105vh - 320px);
 }
 .space{
     height:30%;
@@ -544,10 +658,6 @@ h1 {
 .block{
     height: 72%;
     text-align: center;
-}
-.scrollbar-inside {
-  overflow-y: auto;
-  max-height: calc(105vh - 320px);
 }
 .space{
     height:20%;
