no-wrap for the CAS number

--- a/html/css/style.css
+++ b/html/css/style.css
@@ -418,6 +418,10 @@ td, .table td {
   width: 100px;
 }
 
+.IFRA-number {
+  white-space: nowrap;
+}
+
 /*############################
 ######MENTIONS LEGALES########
 ############################*/
