'PasIFRA' -> show nothing but 'not restricted'

--- a/html/css/style.css
+++ b/html/css/style.css
@@ -422,6 +422,10 @@ td, .table td {
   white-space: nowrap;
 }
 
+.IFRA-show-nothing {
+  display: none;
+};
+
 /*############################
 ######MENTIONS LEGALES########
 ############################*/
