--- a/html/css/stylesansmap.css
+++ b/html/css/stylesansmap.css
@@ -116,6 +116,7 @@ hr {
   font-size: 0.8em;
   color: black;
   text-transform: uppercase;
+  background-color: blue;
 }
 .compteur a {
   color: #D64E26;
