--- a/html/css/stylesansmap.css
+++ b/html/css/stylesansmap.css
@@ -787,6 +787,12 @@ font-size: 10px;
 .envoiRGPD {
   min-width: 100%;
 }
+.partiedroite{
+  min-width: 100%;
+}
+.textepresentation{
+  min-width: 100%;
+}
 }
 
 @media screen and (min-width: 768px) {
