--- a/html/css/stylesansmap.css
+++ b/html/css/stylesansmap.css
@@ -121,6 +121,9 @@ hr {
   color: #D64E26;
   font-size: 2.5em;
 }
+.textepresentation{
+  min-width: 100%;
+}
 /*#########################
 ######CREATION PARFUM######
 #########################*/
