--- a/html/css/style.css
+++ b/html/css/style.css
@@ -882,8 +882,9 @@ h1 {
     font-size: 15px; 
 }
 .modal-title1 {
-    font-size: 18px;
+    font-size: 1em;
     font-weight: bold;
+    margin: 0;
     text-align: center;
     color: red;
 }
